# obsbot-mcp

./: .gitignore  CHANGELOG.md  IPC-DESIGN.md  PROTOCOL.md  README.md  RELEASING.md  UVCVIDEO-LINUX-POSITION-2026-07-21.md  locate_serial.md  package-lock.json  package.json  tiny2_specification.md  tsconfig.json  update.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-20-v0.4.0-multicam-and-naming.md
docs/superpowers/specs/: 2026-07-20-multi-camera-design.md  2026-07-20-tool-naming-design.md  2026-07-21-bus-notifications-design.md
native/linux/: CMakeLists.txt  helper.c
native/macos/: CMakeLists.txt  Makefile  debug_uvc.m  diag_helper.m  helper.m  test_avf_uvc.m
native/windows/: CMakeLists.txt  helper.cpp
scripts/: e2e.mjs  ipc-hw-smoke.mjs  ipc-smoke.mjs  procamp-check.mjs
scripts/integration/: README.md  harness.mjs  keep-awake.mjs  report.mjs  run.mjs
scripts/integration/checks/: ai.mjs  capture.mjs  device.mjs  gimbal.mjs  imaging.mjs  presets.mjs  transitions.mjs  zoom.mjs
src/: index.ts
src/capture/: ffmpeg-args.ts  manager.ts
src/codec/: commands.ts  crc.ts  encoding.ts  frame.ts  opcodes.ts  preset.ts  types.ts
src/device/: helper-factory.ts  manager.ts  session.ts
src/ipc/: client.ts  coordinator.ts  owner.ts  protocol.ts  rendezvous.ts
src/mcp/: framing.ts  log-sink.ts  ready.ts  render.ts  server.ts  tools.ts
src/transport/: helper-process.ts  linux.ts  macos.ts  read-serial.ts  transport.ts  windows.ts
test/: integration-harness.test.ts  integration-report.test.ts  smoke.test.ts  version-sync.test.ts
test/capture/: ffmpeg-args.test.ts  manager.test.ts
test/codec/: commands.test.ts  crc.test.ts  frame.test.ts  opcodes.test.ts  preset.test.ts
test/device/: dead-helper-recovery.test.ts  fake-helper-no-obsbot.mjs  helper-factory.test.ts  manager.test.ts  session.test.ts  watcher.test.ts
test/ipc/: client.test.ts  coordinator.test.ts  owner.test.ts  protocol.test.ts  rendezvous.test.ts
test/mcp/: framing-seam.test.ts  framing.test.ts  log-sink.test.ts  ready.test.ts  render.test.ts  tools.test.ts
test/transport/: fake-helper.mjs  helper-death.test.ts  helper-events.test.ts  helper-process.test.ts  linux.test.ts  macos.test.ts  read-serial.test.ts  recv-vendor.test.ts  windows.test.ts
