cmake_minimum_required(VERSION 3.20)
project(obsbot_helper CXX)
set(CMAKE_CXX_STANDARD 17)
add_executable(obsbot-helper helper.cpp)
target_link_libraries(obsbot-helper strmiids ole32 oleaut32 uuid windowscodecs crypt32 cfgmgr32)
set_target_properties(obsbot-helper PROPERTIES OUTPUT_NAME "obsbot-helper")
